# test_tasks

./: pyproject.toml
test_task_3/: 3.py
test_tasks_1/: 1.py  2.py  4.py
test_tasks_2/: 1.py  2.py
